@startuml "activity-context.png"

Package ActivityContextual {

class ActivityContext {
  id: string
  type = "activity"
  description ?: string
  time?: date
  values: TimeActivity[]
  tag?: string
}


class TimeActivity {
  name = "s"
  unit = "second"
  value : float
}

}
ActivityContext *-- "1..*" TimeActivity

ActivityContext -up-|> Context.Context
TimeActivity -up-|> Context.ContextValue
ActivityContext --> HypertyResource.HypertyResourceType


@enduml
